--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 <body>
     <header class="page-header">
-        <div class="container">
-            <nav>
+        <div class="container nav-media">
+            <nav class="main-nav">
                 <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
                 <ul class="site-nav">
-                    <li><a href="./index.html" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="site-media">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -38,25 +38,25 @@
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="features">
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Внимание к деталям</h3>
                         <p class="features-description">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
-                    </li>
-                    <li>
+                    </li class="item">
+                    <li class="item">
                         <h3 class="features-title">Пунктуальность</h3>
                         <p class="features-description">
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Планирование</h3>
                         <p class="features-description">
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -67,9 +67,9 @@
           <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="speciality">
-                    <li><img src="./images/box1.jpg" alt="box1" width="370"></li>
-                    <li><img src="./images/box2.jpg" alt="box2" width="370"></li>
-                    <li><img src="./images/box3.jpg" alt="box3" width="370"></li>
+                    <li class="item"><img src="./images/box1.jpg" alt="box1" width="370"></li>
+                    <li class="item"><img src="./images/box2.jpg" alt="box2" width="370"></li>
+                    <li class="item"><img src="./images/box3.jpg" alt="box3" width="370"></li>
                 </ul>
           </div>
         </section>
@@ -105,15 +105,22 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
-        <address>
-            <ul class="address">
-                <li><p>г. Киев, пр-т Леси Украинки, 26</p> </li>
-                <li class="media"><p>info@devstudio.com</p></li>
-                <li class="media"><p>+38 096 111 11 11</p></li>
-            </ul>
-        </address>
-       
+        <div class="container">
+            <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
+            <address>
+                <ul class="address">
+                    <li>
+                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    </li>
+                    <li class="media">
+                        <p>info@devstudio.com</p>
+                    </li>
+                    <li class="media">
+                        <p>+38 096 111 11 11</p>
+                    </li>
+                </ul>
+            </address>
+        </div>      
     </footer>
 </body>
 </html>
