--- a/portfolio.html
+++ b/portfolio.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-01</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
-            <ul class="site-nav">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+    <header class="page-header">
+        <div class="container nav-media">
+            <nav class="main-nav">
+                <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
+                <ul class="site-nav">
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="site-media">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="site-media">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
     <main>
-        <section>
-            <h1>Portfolio</h1>
+        <section class="container">
+            <h1 class="visually-hidden">Portfolio</h1>
             <ul class="filter">
-                <li><button type="button" class="button primary">Все</button></li>
-                <li><button type="button" class="button secondary">Веб-сайты</button></li>
-                <li><button type="button" class="button secondary">Приложения</button></li>
-                <li><button type="button" class="button secondary">Дизайн</button></li>
-                <li><button type="button" class="button secondary">Маркетинг</button></li>
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button">Веб-сайты</button></li>
+                <li><button type="button" class="button">Приложения</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
             <ul class="examples">
                 <li class="example-list">
@@ -91,20 +91,22 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
-        <address>
-            <ul class="address">
-                <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26</p>
-                </li>
-                <li class="media">
-                    <p>info@devstudio.com</p>
-                </li>
-                <li class="media">
-                    <p>+38 096 111 11 11</p>
-                </li>
-            </ul>
-        </address>
-    
+        <div class="container">
+            <a href="./index.html" class="logo"> <span class="logo-primary">Web</span>Studio</a>
+            <address>
+                <ul class="address">
+                    <li>
+                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    </li>
+                    <li class="media">
+                        <p>info@devstudio.com</p>
+                    </li>
+                    <li class="media">
+                        <p>+38 096 111 11 11</p>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
-</body>
+ </body>
+</html>
