--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-            <button type="button" class="button primary">Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+                <button type="button" class="button primary">Заказать услугу</button>
+            </div>
         </section>
         <section class="section">
             <div class="container">
