--- a/portfolio.html
+++ b/portfolio.html
@@ -30,62 +30,82 @@
     </header>
 
     <main>
-        <section class="container">
-            <h1 class="visually-hidden">Portfolio</h1>
-            <ul class="filter">
-                <li><button type="button" class="button">Все</button></li>
-                <li><button type="button" class="button">Веб-сайты</button></li>
-                <li><button type="button" class="button">Приложения</button></li>
-                <li><button type="button" class="button">Дизайн</button></li>
-                <li><button type="button" class="button">Маркетинг</button></li>
-            </ul>
-            <ul class="examples">
-                <li class="example-list">
-                    <img src="./images/portfolio1.jpg" alt="portfolio1" width="370">
-                    <p class="example-name">Технокряк</p>
-                    <p class="example-filter">Веб-сайт</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio2.jpg" alt="portfolio2" width="370">
-                    <p class="example-name">Постер New Orlean vs Golden Star</p>
-                    <p class="example-filter">Дизайн</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio3.jpg" alt="portfolio3" width="370">
-                    <p class="example-name">Ресторан Seafood</p>
-                    <p class="example-filter">Приложение</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio4.jpg" alt="portfolio4" width="370">
-                    <p class="example-name">Проект Prime</p>
-                    <p class="example-filter">Маркетинг</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio5.jpg" alt="portfolio5" width="370">
-                    <p class="example-name">Проект Boxes</p>
-                    <p class="example-filter">Приложение</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio6.jpg" alt="portfolio6" width="370">
-                    <p class="example-name">Inspiration has no Borders</p>
-                    <p class="example-filter">Веб-сайт</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio7.jpg" alt="portfolio7" width="370">
-                    <p class="example-name">Издание Limited Edition</p>
-                    <p class="example-filter">Дизайн</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio8.jpg" alt="portfolio8" width="370">
-                    <p class="example-name">Проект LAB</p>
-                    <p class="example-filter">Маркетинг</p>
-                </li>
-                <li class="example-list">
-                    <img src="./images/portfolio9.jpg" alt="portfolio9" width="370">
-                    <p class="example-name">Growing Business</p>
-                    <p class="example-filter">Приложение</p>
-                </li>
-            </ul>
+        <section class="portfolio"> 
+            <div class="container">
+                <h1 class="visually-hidden">Portfolio</h1>
+                <ul class="filter">
+                    <li class="item"><button type="button" class="button current">Все</button></li>
+                    <li class="item"><button type="button" class="button">Веб-сайты</button></li>
+                    <li class="item"><button type="button" class="button">Приложения</button></li>
+                    <li class="item"><button type="button" class="button">Дизайн</button></li>
+                    <li class="item"><button type="button" class="button">Маркетинг</button></li>
+                </ul>
+                <ul class="examples">
+                    <li class="example-list">
+                        <img src="./images/portfolio1.jpg" alt="portfolio1" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Технокряк</p>
+                            <p class="example-filter">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio2.jpg" alt="portfolio2" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Постер New Orlean vs Golden Star</p>
+                            <p class="example-filter">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio3.jpg" alt="portfolio3" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Ресторан Seafood</p>
+                            <p class="example-filter">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio4.jpg" alt="portfolio4" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Проект Prime</p>
+                            <p class="example-filter">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio5.jpg" alt="portfolio5" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Проект Boxes</p>
+                            <p class="example-filter">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio6.jpg" alt="portfolio6" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Inspiration has no Borders</p>
+                            <p class="example-filter">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio7.jpg" alt="portfolio7" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Издание Limited Edition</p>
+                            <p class="example-filter">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio8.jpg" alt="portfolio8" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Проект LAB</p>
+                            <p class="example-filter">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="example-list">
+                        <img src="./images/portfolio9.jpg" alt="portfolio9" width="370px" class="example-image">
+                        <div class="example">
+                            <p class="example-name">Growing Business</p>
+                            <p class="example-filter">Приложение</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
