--- a/portfolio.html
+++ b/portfolio.html
@@ -42,63 +42,63 @@
                 </ul>
                 <ul class="examples">
                     <li class="example-list">
-                        <img src="./images/portfolio1.jpg" alt="portfolio1" width="370px" class="example-image">
+                        <img src="./images/portfolio1.jpg" alt="portfolio1" class="example-image">
                         <div class="example">
                             <p class="example-name">Технокряк</p>
                             <p class="example-filter">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio2.jpg" alt="portfolio2" width="370px" class="example-image">
+                        <img src="./images/portfolio2.jpg" alt="portfolio2" class="example-image">
                         <div class="example">
                             <p class="example-name">Постер New Orlean vs Golden Star</p>
                             <p class="example-filter">Дизайн</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio3.jpg" alt="portfolio3" width="370px" class="example-image">
+                        <img src="./images/portfolio3.jpg" alt="portfolio3" class="example-image">
                         <div class="example">
                             <p class="example-name">Ресторан Seafood</p>
                             <p class="example-filter">Приложение</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio4.jpg" alt="portfolio4" width="370px" class="example-image">
+                        <img src="./images/portfolio4.jpg" alt="portfolio4" class="example-image">
                         <div class="example">
                             <p class="example-name">Проект Prime</p>
                             <p class="example-filter">Маркетинг</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio5.jpg" alt="portfolio5" width="370px" class="example-image">
+                        <img src="./images/portfolio5.jpg" alt="portfolio5" class="example-image">
                         <div class="example">
                             <p class="example-name">Проект Boxes</p>
                             <p class="example-filter">Приложение</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio6.jpg" alt="portfolio6" width="370px" class="example-image">
+                        <img src="./images/portfolio6.jpg" alt="portfolio6" class="example-image">
                         <div class="example">
                             <p class="example-name">Inspiration has no Borders</p>
                             <p class="example-filter">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio7.jpg" alt="portfolio7" width="370px" class="example-image">
+                        <img src="./images/portfolio7.jpg" alt="portfolio7" class="example-image">
                         <div class="example">
                             <p class="example-name">Издание Limited Edition</p>
                             <p class="example-filter">Дизайн</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio8.jpg" alt="portfolio8" width="370px" class="example-image">
+                        <img src="./images/portfolio8.jpg" alt="portfolio8" class="example-image">
                         <div class="example">
                             <p class="example-name">Проект LAB</p>
                             <p class="example-filter">Маркетинг</p>
                         </div>
                     </li>
                     <li class="example-list">
-                        <img src="./images/portfolio9.jpg" alt="portfolio9" width="370px" class="example-image">
+                        <img src="./images/portfolio9.jpg" alt="portfolio9" class="example-image">
                         <div class="example">
                             <p class="example-name">Growing Business</p>
                             <p class="example-filter">Приложение</p>
@@ -116,13 +116,13 @@
             <address>
                 <ul class="address">
                     <li>
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                        <p class="item">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
                     <li class="media">
-                        <p>info@devstudio.com</p>
+                        <p class="item">info@devstudio.com</p>
                     </li>
                     <li class="media">
-                        <p>+38 096 111 11 11</p>
+                        <p class="item">+38 096 111 11 11</p>
                     </li>
                 </ul>
             </address>
