--- a/index.html
+++ b/index.html
@@ -81,23 +81,31 @@
                 <ul class="team">
                     <li class="member-list">
                         <img src="./images/img1.jpg" alt="img1" width="270">
-                        <p class="team-member">Игорь Демьяненко</p>
-                        <p class="team-position">Product Designer</p>
+                        <div class="member-info">
+                            <p class="team-member">Игорь Демьяненко</p>
+                            <p class="team-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="member-list">
                         <img src="./images/img2.jpg" alt="img2" width="270">
-                        <p class="team-member">Ольга Репина</p>
-                        <p class="team-position">Frontend Developer</p>
+                        <div class="member-info">
+                            <p class="team-member">Ольга Репина</p>
+                            <p class="team-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="member-list">
                         <img src="./images/img3.jpg" alt="img3" width="270">
-                        <p class="team-member">Николай Тарасов</p>
-                        <p class="team-position">Marketing</p>
+                        <div class="member-info">
+                            <p class="team-member">Николай Тарасов</p>
+                            <p class="team-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="member-list">
                         <img src="./images/img3.jpg" alt="img3" width="270">
-                        <p class="team-member">Михаил Ермаков</p>
-                        <p class="team-position">UI Designer</p>
+                        <div class="member-info">
+                            <p class="team-member">Михаил Ермаков</p>
+                            <p class="team-position">UI Designer</p>
+                        </div>
                     </li>
                 
                 </ul>
@@ -112,13 +120,13 @@
             <address>
                 <ul class="address">
                     <li>
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                        <p class="item">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
                     <li class="media">
-                        <p>info@devstudio.com</p>
+                        <p class="item">info@devstudio.com</p>
                     </li>
                     <li class="media">
-                        <p>+38 096 111 11 11</p>
+                        <p class="item">+38 096 111 11 11</p>
                     </li>
                 </ul>
             </address>
